Fix start command for DigitalOcean (PORT/host)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node scripts/start.mjs",
     "lint": "next lint",
     "generate-secret": "node scripts/generate-session-secret.js"
   },
