--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate-secret": "node scripts/generate-session-secret.js"
   },
   "dependencies": {
+    "@garmin/fitsdk": "^21.188.0",
     "gpx2fit": "^0.0.5",
     "jose": "^5.9.6",
     "next": "^15.1.6",
@@ -33,4 +34,3 @@
     "typescript": "^5.7.3"
   }
 }
-
