Add domain migration guide for transitionforstrava.com - Update .env.example with production domain notes - Add DOMAIN_MIGRATION.md with step-by-step instructions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # App base URL (used only if you want to build absolute URLs)
+# For local development: http://localhost:3000
+# For production: https://transitionforstrava.com
 APP_BASE_URL=http://localhost:3000
 
 # 32+ chars secret used to encrypt session cookies.
@@ -12,6 +14,8 @@ STRAVA_CLIENT_ID=replace_me
 STRAVA_CLIENT_SECRET=replace_me
 
 # Must exactly match what you configured in Strava app settings
+# For local development: http://localhost:3000/api/auth/strava/callback
+# For production: https://transitionforstrava.com/api/auth/strava/callback
 STRAVA_REDIRECT_URI=http://localhost:3000/api/auth/strava/callback
 
 # Comma-separated scopes. For V1 we use read access to activities/streams.
